# twitter-mass-blocker

./: .gitignore  BUILD.bazel  LICENSE  Makefile  WORKSPACE  defs.bzl  manifest.yaml  package.json
src/: BUILD.bazel  tsconfig-base.json
src/credentials/: BUILD.bazel  index.ts  tsconfig.json
src/logging/: BUILD.bazel  index.ts  tsconfig.json
src/options/: BUILD.bazel  index.ts  tsconfig.json
src/pages/: BUILD.bazel
src/pages/background/: BUILD.bazel  background.html  block_likers.ts  block_list.ts  block_queue.ts  db.ts  index.ts  operations.ts  tsconfig.json
src/pages/block_likers/: BUILD.bazel  block_likers.html  index.ts  tsconfig.json
src/pages/dashboard/: BUILD.bazel  dashboard.html  index.ts  tsconfig.json
src/pages/options/: BUILD.bazel  index.ts  options.html  tsconfig.json
src/pages/popup/: BUILD.bazel  index.ts  popup.html  tsconfig.json
src/state_structs/: BUILD.bazel  index.ts  tsconfig.json
src/twitter-proxy-client/: BUILD.bazel  client.spec.ts  client.ts  config_store.ts  index.ts  patch_global_for_tests.js  tsconfig.json
src/types/: BUILD.bazel  global.d.ts
tools/: bazel_deps.bzl
