load("//:defs.bzl", "js_library", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "sources",
    srcs = glob(["*.ts"]),
    composite = True,
    declaration = True,
    extends = "//src:tsconfig",
    tsconfig = {},
)

js_library(
    name = "credentials",
    package_name = "credentials",
    deps = [":sources"],
)
