load("//:defs.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "sources",
    srcs = glob(["*.d.ts"]),
    declaration = True,
    extends = "//src:tsconfig",
    tsconfig = {},
    deps = [
        "@npm//@types/webextension-polyfill",
    ],
)

js_library(
    name = "types",
    package_name = "types",
    srcs = ["package.json"] + glob(["*.d.ts"]),
    deps = [":sources"],
)
